--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "tailwindcss": "^1.8.10"
   }
