--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rrule": "^2.6.6",
     "tailwindcss-dark-mode": "^1.1.6",
     "uuid": "^8.3.0",
+    "vue-multiselect": "^2.1.6",
     "vuex": "^3.5.1"
   },
   "keywords": [],
